# LamaRizer

./: README.md  pyproject.toml  setup.sh
lamrizer/: main.py
tests/: __init__.py
